--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.14.3",
+    "@prisma/client": "^6.8.2",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "hono": "^4.7.10",
     "jsonwebtoken": "^9.0.2",
     "ms": "^2.1.3",
+    "openai": "^5.0.1",
     "zod": "^3.25.42"
   },
   "devDependencies": {
@@ -20,6 +22,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/ms": "^2.1.0",
     "@types/node": "^20.11.17",
+    "prisma": "^6.8.2",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
