--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "seed": "node ../scripts/seed.js",
+    "db:reset": "npx prisma migrate reset --force && npm run seed"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.3",
